<resources>
    <string name="app_name">Frontend-Integrador-4</string>
    <string name="endereco">Endereco</string>
    <string name="cadastro_de_igreja">Cadastro de Igreja</string>
    <string name="telefone">Telefone(s):</string>
    <string name="rua_ou_avenida">Nome da rua ou Avenida</string>
    <string name="cnpj">CNPJ:</string>
    <string name="apenas_numeros">Apenas numeros!</string>
    <string name="nome">Nome:</string>
    <string name="nome_da_igreja">Nome da Igreja</string>
    <string name="casa_apartamento_etc">Casa, apartamento etc..</string>
    <string name="cidade">Cidade</string>
    <string name="cep">Cep:</string>
    <string name="bairro">Bairro:</string>
    <string name="complemeto">Complemeto:</string>
    <string name="apenas_letras">Apenas letras.</string>
    <string name="n_mero">Número:</string>
    <string name="logradouro">Logradouro:</string>
    <string name="cadastro_de_endereco">Cadastro de Endereco</string>
    <string name="apenas_n_meros">Apenas Números.</string>
    <string name="cidade_que_reside">Cidade que reside.</string>
    <string name="nome_da_rua_que_reside">Nome da rua que reside.</string>
    <string name="n_mero_da_resid_ncia">Número da residência.</string>
    <string name="salvar">Salvar</string>
    <string name="cadastrsr_endereco">Cadastrsr Endereco</string>
    <string name="xx_xxxxx_xxxx">(xx) xxxxx-xxxx</string>
    <string name="estado">Estado :</string>
    <string name="estado_que_reside">Estado que reside.</string>
</resources>
