<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">


    <TextView
        android:id="@+id/order_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/cadastro_de_endereco"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cnpj_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/logradouro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_textview" />

    <EditText
        android:id="@+id/cnpj_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:hint="@string/nome_da_rua_que_reside"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/cnpj_label"
        app:layout_constraintStart_toEndOf="@+id/cnpj_label"
        tools:targetApi="o"/>

    <TextView
        android:id="@+id/nome_label"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/n_mero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cnpj_text" />

    <EditText
        android:id="@+id/nome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:ems="10"
        android:hint="@string/n_mero_da_resid_ncia"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintBaseline_toBaselineOf="@+id/nome_label"
        app:layout_constraintStart_toEndOf="@+id/nome_label"
        tools:layout_editor_absoluteY="112dp"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/telefone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/bairro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefone_text" />

    <EditText
        android:id="@+id/telefone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/casa_apartamento_etc"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/complemento_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/complemento_label"
        tools:layout_editor_absoluteY="162dp"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/complemento_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/complemeto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_text" />

    <EditText
        android:id="@+id/bairro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/apenas_letras"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/telefone_label"
        app:layout_constraintStart_toEndOf="@+id/telefone_label"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/cidade_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/cidade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estado_text" />

    <EditText
        android:id="@+id/cidade_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cidade_que_reside"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/cidade_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/cidade_label"
        tools:layout_editor_absoluteY="373dp"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/estado_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/estado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cep_text" />

    <EditText
        android:id="@+id/estado_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/estado_que_reside"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/estado_label"
        app:layout_constraintStart_toEndOf="@+id/estado_label"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/cep_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/cep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bairro_text" />

    <EditText
        android:id="@+id/cep_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/apenas_n_meros"
        android:inputType="phone"
        app:layout_constraintStart_toEndOf="@+id/cep_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/cep_label"
        tools:targetApi="o" />

    <Button
        android:id="@+id/buttonSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>